--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 :root {/*pseudo-class, pretty much a refernece to the DOM*/
     --grid-cols: 1;
     --grid-rows: 1;
+    
   }
   
+  /*Grid styling*/
   #container {
+    padding:20px;
     display: grid;
-    grid-gap: 1em;
+    gap: 0em;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
   }
@@ -13,5 +16,15 @@
   .grid-item {
     padding: 1em;
     border: 1px solid #ddd;
-    text-align: center;
+    
   }
+
+  /***********************************/
+
+  /*Misc stylings*/
+  #title{
+      text-align: center;
+      font-family: Arial, Helvetica, sans-serif;
+      color:blueviolet;
+  }
+
