--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   
   /*Grid styling*/
   #container {
-    padding:20px;
+    width:100%;
     display: grid;
     gap: 0em;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
