--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 :root {/*pseudo-class, pretty much a refernece to the DOM*/
     --grid-cols: 1;
     --grid-rows: 1;
+    display:flex;
+    justify-content: center;
     
   }
   
   /*Grid styling*/
   #container {
+    margin-left: 50px;
+    margin-right: 50px;
     width:100%;
+    height:200px;
+    /* border: 1px solid blueviolet; */
     display: grid;
     gap: 0em;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
@@ -14,12 +20,19 @@
   }
   
   .grid-item {
-    padding: 1em;
+    padding: 3px;
     border: 1px solid #ddd;
-    
   }
 
-  /***********************************/
+  /*******************************/
+
+  /*Grid Reset button*/
+  #set-grid {
+    margin:20px;
+  }
+  
+
+  /********************************/
 
   /*Misc stylings*/
   #title{
@@ -27,4 +40,6 @@
       font-family: Arial, Helvetica, sans-serif;
       color:blueviolet;
   }
+
+  /*************************/
 
